--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
+  google_sign_in: ^6.1.4
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -20,5 +24,6 @@ flutter:
 
 
   assets:
-    - assets/
+    - assets/images/
+    
 
