--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   firebase_auth: ^5.6.0
   google_sign_in: ^6.1.4
   flutter_svg: ^2.0.7
+  http: ^1.2.1
+  intl: ^0.19.0 
 
 dev_dependencies:
   flutter_test:
