--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # Your existing Firebase dependencies
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
   google_sign_in: ^6.1.4
   flutter_svg: ^2.0.7
+  
+  # Additional Firebase dependencies needed for the profile screen
+  cloud_firestore: ^5.5.0
+  firebase_storage: ^12.4.0
+  
+  # Image handling
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
@@ -21,9 +30,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-
+  
   assets:
     - assets/images/
+
+
     
 
