clinc list-clinc details-bbokingconf-booking loading- booking success...

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  lottie: ^3.1.0
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
   firebase_storage: ^12.4.0
@@ -17,9 +17,13 @@ dependencies:
   google_sign_in: ^6.1.4
   flutter_svg: ^2.0.7
   image_picker: ^1.0.7
-  intl: ^0.19.0 
-  http: ^0.13.6
-
+  intl: ^0.19.0
+  http: ^1.1.0
+  flutter_map: ^6.0.1
+  latlong2: ^0.9.0
+  geolocator: ^11.0.0
+  
+  
 dependency_overrides:
   firebase_auth_web: ^5.15.2
 
@@ -39,6 +43,5 @@ flutter:
 
   assets:
     - assets/images/
-
-    
-
+    - assets/images/4939569d-6a3c-4878-8960-803e5521f119.jpg
+    - assets/doctor.jpg
