--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   image_picker: ^1.0.7
   intl: ^0.19.0 
   http: ^0.13.6
+  provider: ^6.0.5
+  shared_preferences: ^2.2.2
 
 dependency_overrides:
   firebase_auth_web: ^5.15.2
