--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,11 @@ dependencies:
   google_sign_in: ^6.1.4
   flutter_svg: ^2.0.7
   image_picker: ^1.0.7
-  flutter_map: ^6.0.1
+  flutter_map: ^6.1.0
   latlong2: ^0.9.0
   geolocator: ^11.0.0
   intl: ^0.19.0 
-  http: ^0.13.6
+  http: ^1.4.0
   provider: ^6.0.5
   shared_preferences: ^2.2.2
 
@@ -46,3 +46,4 @@ flutter:
     - assets/images/
     - assets/images/4939569d-6a3c-4878-8960-803e5521f119.jpg
     - assets/doctor.jpg
+    - assets/animations/Catloader.json
