--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   shared_preferences: ^2.2.2
   url_launcher: ^6.3.2
   geocoding: ^2.1.0
+  table_calendar: ^3.0.9
 
-  
 
 dependency_overrides:
   firebase_auth_web: ^5.15.2
