--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_messaging: ^15.2.10
   flutter_local_notifications: ^19.4.0
   onesignal_flutter: ^5.3.4
+  curved_navigation_bar: ^1.0.6
   
 
 dependency_overrides:
