--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: petut
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -20,8 +20,8 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   geolocator: ^11.0.0
-  
-  intl: ^0.19.0 
+
+  intl: ^0.19.0
   http: ^1.4.0
   provider: ^6.0.5
   shared_preferences: ^2.2.2
@@ -33,7 +33,7 @@ dependencies:
   flutter_local_notifications: ^19.4.0
   onesignal_flutter: ^5.3.4
   curved_navigation_bar: ^1.0.6
-  
+  fluttermoji: ^1.0.2
 
 dependency_overrides:
   firebase_auth_web: ^5.15.2
@@ -53,7 +53,11 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/images/
-    - assets/images/4939569d-6a3c-4878-8960-803e5521f119.jpg
-    - assets/doctor.jpg
-    - assets/animations/Catloader.json
+    - assets/animations/
+    - assets/images/petut.png
+    - assets/dogg.jpg
+    - assets/birdd.jpg
+    - assets/cattt.jpg
+    - assets/toyy.jpg
