--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   google_sign_in: ^6.1.4
   flutter_svg: ^2.0.7
   image_picker: ^1.0.7
+  image_cropper: ^8.0.2
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   geolocator: ^11.0.0
