--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.7.2
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -21,7 +21,6 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   geolocator: ^11.0.0
-
   intl: ^0.19.0
   http: ^1.4.0
   provider: ^6.0.5
@@ -35,6 +34,8 @@ dependencies:
   onesignal_flutter: ^5.3.4
   curved_navigation_bar: ^1.0.6
   fluttermoji: ^1.0.2
+  tflite_flutter: ^0.11.0
+  image: ^4.5.4
 
 dependency_overrides:
   firebase_auth_web: ^5.15.2
@@ -62,3 +63,6 @@ flutter:
     - assets/birdd.jpg
     - assets/cattt.jpg
     - assets/toyy.jpg
+    - assets/models/
+    - assets/models/labels.txt
+    - assets/models/model_unquant.tflite
