final update wooooooooooow

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,13 +44,12 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/images/petut.png"
+  image_path: "assets/petut.png"
 
 flutter:
   uses-material-design: true
